--- a/final/contact.html
+++ b/final/contact.html
@@ -11,9 +11,14 @@
     <meta property="og:description"
         content="Discover and enjoy the natural beauty and attractions of the Philippines." />
     <meta property="og:image" content="https://glenn-d-soriano.github.io/wdd231/final/images/final.jpg" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="600" />
     <meta property="og:url" content="https://glenn-d-soriano.github.io/wdd231/final/contact.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_CA" />
     <link rel="icon" href="images/favicon.ico" />
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/contact.css" />
     <title>Explore Philippines | Contact</title>
 </head>
 
@@ -95,14 +100,14 @@
         <!-- EMPLOYEE PROFILES -->
         <section class="employee-profiles">
             <h2>Meet Our Team</h2>
-            <figure class="profile"><img src="images/employee1.jpg" alt="Efren Dela Cruz">
+            <figure class="profile"><img src="images/efren.webp" alt="Efren Dela Cruz">
                 <figcaption>Efren Dela Cruz - Tour Guide</figcaption>
             </figure>
-            <figure class="profile"><img src="images/employee2.jpg" alt="Ramir Soriano">
+            <figure class="profile"><img src="images/ramir.webp" alt="Ramir Soriano">
                 <figcaption>Ramir Soriano - Trip Coordinator</figcaption>
             </figure>
-            <figure class="profile"><img src="images/employee3.jpg" alt="Mark Longoria">
-                <figcaption>Mark Longoria - Safety Officer</figcaption>
+            <figure class="profile"><img src="images/richard.webp" alt="Richard Soriano">
+                <figcaption>Nico Boy - Safety Officer</figcaption>
             </figure>
         </section>
 
@@ -124,11 +129,11 @@
 
     <footer>
         <div class="footer-container">
-            <section class="contact">
-                <p><strong>Winnipeg Chamber of Commerce</strong></p>
-                <p>111 Main St. Winnipeg, MB R2J2J3</p>
-                <p>Email: <a href="mailto:info@winnipegchamber.org">info@winnipegchamber.org</a></p>
-                <p>Phone: (204) 123-1234</p>
+            <section class="contact" aria-label="Contact Information">
+                <p><strong>Explore Philippines</strong></p>
+                <p>123 Island Road, Manila, Philippines</p>
+                <p>Email: <a href="mailto:info@explorephilippines.com">info@explorephilippines.com</a></p>
+                <p>Phone: +63 912 345 6789</p>
             </section>
 
             <section class="sociallinks">
