--- a/final/destinations.html
+++ b/final/destinations.html
@@ -14,7 +14,8 @@
     <meta property="og:locale" content="en_CA" />
     <meta property="og:site_name" content="Explore Philippines - Glenn Soriano" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/destinations.css" />
     <title>Explore Philippines | Destinations</title>
 </head>
 
@@ -49,11 +50,11 @@
 
     <footer>
         <div class="footer-container">
-            <section class="contact">
-                <p><strong>Winnipeg Chamber of Commerce</strong></p>
-                <p>111 Main St. Winnipeg, MB R2J2J3</p>
-                <p>Email: <a href="mailto:info@winnipegchamber.org">info@winnipegchamber.org</a></p>
-                <p>Phone: (204) 123-1234</p>
+            <section class="contact" aria-label="Contact Information">
+                <p><strong>Explore Philippines</strong></p>
+                <p>123 Island Road, Manila, Philippines</p>
+                <p>Email: <a href="mailto:info@explorephilippines.com">info@explorephilippines.com</a></p>
+                <p>Phone: +63 912 345 6789</p>
             </section>
 
             <section class="sociallinks" aria-label="Social Media Links">
