--- a/final/index.html
+++ b/final/index.html
@@ -18,7 +18,8 @@
     <meta property="og:locale" content="en_CA" />
     <meta property="og:site_name" content="Explore Philippines - Glenn Soriano" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/index.css" />
     <title>Explore Philippines | Home</title>
 </head>
 
@@ -26,12 +27,13 @@
     <header>
         <div class="logo">
             <img src="images/logo.jpeg" alt="Explore Philippines Logo" />
-            <div class="logo-text"> <span>Book Now!</span></div>
+            <div class="logo-text"><span>Book Now!</span></div>
         </div>
 
         <h1>Explore Philippines</h1>
-        <button id="menu-toggle" aria-label="Toggle Navigation Menu">☰</button>
-        <nav>
+        <button id="menu-toggle" aria-label="Toggle Navigation Menu" aria-expanded="false"
+            aria-controls="primary-navigation">☰</button>
+        <nav id="primary-navigation" role="navigation" aria-label="Primary Navigation">
             <ul class="nav-links">
                 <li><a href="index.html" class="active" id="menu-home">Home</a></li>
                 <li><a href="destinations.html" id="menu-discover">Destinations</a></li>
@@ -40,7 +42,7 @@
         </nav>
     </header>
 
-    <section class="hero">
+    <section class="hero" role="img" aria-label="Philippine tropical beach">
         <img src="images/hero.webp" alt="Philippine tropical beach" loading="lazy" />
         <div class="hero-text">
             <h2>Discover Paradise</h2>
@@ -61,76 +63,88 @@
         <section class="features">
             <h2>What You'll Find Here</h2>
             <div class="feature-grid">
-                <div class="feature-card">
+                <article class="feature-card">
                     <img src="images/destination.webp" alt="Tropical Destination" loading="lazy" />
                     <h3>Stunning Destinations</h3>
                     <p>🌴 Discover hidden gems, white sand beaches, and breathtaking views across the Philippines.</p>
-                </div>
-                <div class="feature-card">
-                    <img src="images/affordable.webp" alt="Affordable Resorts" loading="lazy" />
+                </article>
+                <article class="feature-card">
+                    <img src="images/budget.jpeg" alt="Affordable Resorts" loading="lazy" />
                     <h3>Budget-Friendly Travel</h3>
                     <p>💸 Find top tips on saving money while enjoying luxury resorts and unforgettable experiences.</p>
-                </div>
-                <div class="feature-card">
-                    <img src="images/reviews.webp" alt="Traveler Reviews" loading="lazy" />
+                </article>
+                <article class="feature-card">
+                    <img src="images/traveler.jpeg" alt="Traveler Reviews" loading="lazy" />
                     <h3>Traveler Reviews</h3>
                     <p>📸 Read real stories and guides from fellow adventurers who’ve explored the islands.</p>
-                </div>
-                <div class="feature-card">
-                    <img src="images/maps.webp" alt="Interactive Maps" loading="lazy" />
+                </article>
+                <article class="feature-card">
+                    <img src="images/travel.jpeg" alt="Interactive Maps" loading="lazy" />
                     <h3>Interactive Maps</h3>
-                    <p>🗺️ Navigate destinations with ease using our dynamic maps and interactive destination modals.</p>
-                </div>
+                    <p>🗺️ Navigate destinations with ease using our dynamic maps and interactive destination modals.
+                    </p>
+                </article>
             </div>
         </section>
-          
 
-        <section>
-            <h2>Subscribe to Our Newsletter</h2>
-            <form id="newsletter-form">
-                <input type="email" id="email" name="email" placeholder="Enter your email" required />
+        <!-- Added Newsletter Section -->
+        <section class="newsletter" aria-labelledby="newsletter">
+            <h2 id="newsletter">Join Our Travel Newsletter</h2>
+            <form id="newsletter-form" aria-describedby="newsletter-description">
+                
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required />
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required />
+                <p id="newsletter-description">Number of Subscriptions: <span id="reviewCount">0</span></p>
+
                 <button type="submit">Subscribe</button>
-                <p id="newsletter-message" aria-live="polite"></p>
             </form>
+            <p id="newsletter-message" aria-live="polite"></p>
         </section>
+
+        <!-- Added Call to Action Section -->
+        <section class="call-to-action" aria-labelledby="call-to-action">
+            <h2 id="call-to-action">Plan Your Next Vacation</h2>
+            <p>Discover hidden gems and stunning destinations across the Philippines.</p>
+            <a href="destinations.html" class="cta-button" aria-label="Explore Destinations">Explore Destinations</a>
+        </section>
+
     </main>
 
     <footer>
         <div class="footer-container">
-            <section class="contact">
-                <p><strong>Winnipeg Chamber of Commerce</strong></p>
-                <p>111 Main St. Winnipeg, MB R2J2J3</p>
-                <p>Email: <a href="mailto:info@winnipegchamber.org">info@winnipegchamber.org</a></p>
-                <p>Phone: (204) 123-1234</p>
+            <section class="contact" aria-label="Contact Information">
+                <p><strong>Explore Philippines</strong></p>
+                <p>123 Island Road, Manila, Philippines</p>
+                <p>Email: <a href="mailto:info@explorephilippines.com">info@explorephilippines.com</a></p>
+                <p>Phone: +63 912 345 6789</p>
             </section>
 
             <section class="sociallinks" aria-label="Social Media Links">
                 <a href="https://youtube.com" title="YouTube">
-                    <img src="images/youtube.png" alt="YouTube Logo" width="32" height="32">
+                    <img src="images/youtube.png" alt="YouTube Logo" width="32" height="32" />
                 </a>
                 <a href="https://twitter.com" title="Twitter">
-                    <img src="images/twitter.png" alt="Twitter Logo" width="32" height="32">
+                    <img src="images/twitter.png" alt="Twitter Logo" width="32" height="32" />
                 </a>
                 <a href="https://www.instagram.com/" title="Instagram">
-                    <img src="images/instagram.png" alt="Instagram Logo" width="32" height="32">
+                    <img src="images/instagram.png" alt="Instagram Logo" width="32" height="32" />
                 </a>
             </section>
 
-            <section class="designer">
-                <p>&copy; <span id="current-year"></span> Explore Philippines | 🇵🇭Glenn Soriano🇵🇭</p>
+            <section class="designer" aria-label="Site Information">
+                <p>&copy; <span id="current-year"></span> Explore Philippines | 🇵🇭 Glenn Soriano 🇵🇭</p>
                 <p>Last Modified: <span id="last-modified"></span></p>
                 <p>
                     <a href="references.html">Attributions</a> |
-                    <a href="https://youtu.be/YOUR_VIDEO_ID" target="_blank">Project Video</a>
+                    <a href="https://youtu.be/YOUR_VIDEO_ID" target="_blank" rel="noopener noreferrer">Project Video</a>
                 </p>
             </section>
         </div>
     </footer>
 
-    <script type="module" src="scripts/main.js"></script>
-    <script>
-        // Dynamic footer year and last modified
-        document.getElementById("current-year").textContent = new Date().getFullYear();
-        document.getElementById("last-modified").textContent = document.lastModified;
-    </script>
 </body>
+
+</html>
