--- a/final/index.html
+++ b/final/index.html
@@ -38,6 +38,8 @@
                 <li><a href="index.html" class="active" id="menu-home">Home</a></li>
                 <li><a href="destinations.html" id="menu-discover">Destinations</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="final/index.html">Final</a></li>
+                <li><a href="https://github.com/glenn-d-soriano" target="_blank">GitHub Profile</a></li>
             </ul>
         </nav>
     </header>
