--- a/final/contact.html
+++ b/final/contact.html
@@ -16,7 +16,11 @@
     <meta property="og:url" content="https://glenn-d-soriano.github.io/wdd231/final/contact.html" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_CA" />
-    <link rel="icon" href="images/favicon.ico" />
+    <meta property="og:site_name" content="Explore Philippines - Glenn Soriano" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/contact.css" />
     <title>Explore Philippines | Contact</title>
