--- a/final/destinations.html
+++ b/final/destinations.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Explore beautiful destinations in the Philippines" />
+    <meta name="description"
+        content="Explore the natural beauty of the Philippines. Discover beaches, destinations, and travel tips." />
     <meta name="author" content="Glenn Soriano" />
     <meta property="og:title" content="Philippine Travel Destinations" />
     <meta property="og:description" content="Explore budget-friendly travel destinations in the Philippines." />
@@ -13,6 +14,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_CA" />
     <meta property="og:site_name" content="Explore Philippines - Glenn Soriano" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/destinations.css" />
