--- a/final/index.html
+++ b/final/index.html
@@ -17,6 +17,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_CA" />
     <meta property="og:site_name" content="Explore Philippines - Glenn Soriano" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles/global.css" />
     <link rel="stylesheet" href="styles/index.css" />
@@ -38,7 +41,6 @@
                 <li><a href="index.html" class="active" id="menu-home">Home</a></li>
                 <li><a href="destinations.html" id="menu-discover">Destinations</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="final/index.html">Final</a></li>
                 <li><a href="https://github.com/glenn-d-soriano" target="_blank">GitHub Profile</a></li>
             </ul>
         </nav>
@@ -54,7 +56,7 @@
 
     <main>
         <section>
-            <h2>Why Explore the Philippines?</h2>
+            <h1>Explore Philippines</h1>
             <p>
                 The Philippines is a tropical haven of over 7,000 islands, rich in culture and natural beauty.
                 Whether you're dreaming of pristine beaches, vibrant festivals, or delicious cuisine, this site helps
