--- a/final/contact.html
+++ b/final/contact.html
@@ -122,7 +122,7 @@
             <address>
                 <p>123 Manila Road, Makati City, Metro Manila, Philippines</p>
                 <p>Phone: (02) 1234 5678</p>
-                <p>Email: <a href="mailto:info@explorephilippines.ph">info@explorephilippines.ph</a></p>
+                <a href="mailto:info@explorephilippines.com">Contact us</a>
             </address>
             <div class="google-map">
                 <iframe src="https://www.google.com/maps/embed?pb=..." width="400" height="300" allowfullscreen=""
