--- a/final/index.html
+++ b/final/index.html
@@ -122,7 +122,7 @@
             <section class="contact" aria-label="Contact Information">
                 <p><strong>Explore Philippines</strong></p>
                 <p>123 Island Road, Manila, Philippines</p>
-                <a href="mailto:info@example.com">Contact us</a>
+                <a href="info@exploreph.com">Contact us</a>
                 <p>Phone: +63 912 345 6789</p>
             </section>
 
