--- a/final/index.html
+++ b/final/index.html
@@ -46,13 +46,14 @@
         </nav>
     </header>
 
-    <section class="hero" role="img" aria-label="Philippine tropical beach">
+    <section class="hero">
         <img src="images/hero.webp" alt="Philippine tropical beach" loading="lazy" />
         <div class="hero-text">
             <h2>Discover Paradise</h2>
             <p>Your guide to the best budget-friendly adventures in the Philippines.</p>
         </div>
     </section>
+      
 
     <main>
         <section>
