--- a/final/index.html
+++ b/final/index.html
@@ -33,7 +33,7 @@
             <div class="logo-text"><span>Book Now!</span></div>
         </div>
 
-        <h1>Explore Philippines</h1>
+        <p class="site-title">Explore Philippines</p>
         <button id="menu-toggle" aria-label="Toggle Navigation Menu" aria-expanded="false"
             aria-controls="primary-navigation">☰</button>
         <nav id="primary-navigation" role="navigation" aria-label="Primary Navigation">
