--- a/final/contact.html
+++ b/final/contact.html
@@ -32,18 +32,19 @@
             <img src="images/logo.jpeg" alt="Explore Philippines Logo" />
             <div class="logo-text"><span>Book Now!</span></div>
         </div>
-        <h1>Explore Philippines</h1>
+        <p class="site-title">Explore Philippines</p>
         <button id="menu-toggle" aria-label="Toggle Navigation Menu">☰</button>
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="destinations.html">Destinations</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="https://github.com/glenn-d-soriano" target="_blank">GitHub Profile</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- HERO SECTION (copied exactly from index.html) -->
+    
     <section class="hero">
         <img src="images/hero.webp" alt="Philippine tropical beach" loading="lazy" />
         <div class="hero-text">
