--- a/final/destinations.html
+++ b/final/destinations.html
@@ -30,13 +30,15 @@
             <div class="logo-text"> <span>Book Now!</span></div>
         </div>
 
-        <h1>Explore Philippines</h1>
+        <p class="site-title">Explore Philippines</p>
         <button id="menu-toggle" aria-label="Toggle Navigation Menu">☰</button>
         <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="destinations.html" class="active" id="menu-discover">Destinations</a></li>
-                <li><a href="contact.html">Contact</a></li>     </ul>
+                <li><a href="contact.html">Contact</a></li>     
+                <li><a href="https://github.com/glenn-d-soriano" target="_blank">GitHub Profile</a></li>
+            </ul>
         </nav>
     </header>
 
