--- a/final/index.html
+++ b/final/index.html
@@ -123,7 +123,7 @@
             <section class="contact" aria-label="Contact Information">
                 <p><strong>Explore Philippines</strong></p>
                 <p>123 Island Road, Manila, Philippines</p>
-                <a href="info@exploreph.com">Contact us</a>
+                <p>Email: <a href="info@exploreph.com">Contact us</a></p>
                 <p>Phone: +63 912 345 6789</p>
             </section>
 
