--- a/final/index.html
+++ b/final/index.html
@@ -32,11 +32,9 @@
             <img src="images/logo.jpeg" alt="Explore Philippines Logo" />
             <div class="logo-text"><span>Book Now!</span></div>
         </div>
-
         <p class="site-title">Explore Philippines</p>
-        <button id="menu-toggle" aria-label="Toggle Navigation Menu" aria-expanded="false"
-            aria-controls="primary-navigation">☰</button>
-        <nav id="primary-navigation" role="navigation" aria-label="Primary Navigation">
+        <button id="menu-toggle" aria-label="Toggle Navigation Menu">☰</button>
+        <nav>
             <ul class="nav-links">
                 <li><a href="index.html" class="active" id="menu-home">Home</a></li>
                 <li><a href="destinations.html" id="menu-discover">Destinations</a></li>
@@ -123,7 +121,7 @@
             <section class="contact" aria-label="Contact Information">
                 <p><strong>Explore Philippines</strong></p>
                 <p>123 Island Road, Manila, Philippines</p>
-                <p>Email: <a href="info@exploreph.com">Contact us</a></p>
+                <p>Email: <a href="info@exploreph.com">info@exploreph.com</a></p>
                 <p>Phone: +63 912 345 6789</p>
             </section>
 
