--- a/final/index.html
+++ b/final/index.html
@@ -148,7 +148,7 @@
         </div>
     </footer>
     
-    <script type="module" src="scripts/main.js"></script>
+    <script type="module" src="scripts/main.js">defer </script>
     <script>
         // Dynamic footer year and last modified
         document.getElementById("current-year").textContent = new Date().getFullYear();
