--- a/final/contact.html
+++ b/final/contact.html
@@ -157,11 +157,8 @@
         </div>
     </footer>
 
-    <script type="module" src="scripts/main.js"></script>
-    <script>
-        document.getElementById("current-year").textContent = new Date().getFullYear();
-        document.getElementById("last-modified").textContent = document.lastModified;
-    </script>
+    <script type="module" src="scripts/main.js">defer </script>
+    
 </body>
 
 </html>
