--- a/final/destinations.html
+++ b/final/destinations.html
@@ -87,12 +87,8 @@
     </footer>
 
     <script type="module" src="scripts/destinations.js"></script>
-    <script type="module" src="scripts/main.js"></script>
-    <script>
-        // Dynamic footer year and last modified
-        document.getElementById("current-year").textContent = new Date().getFullYear();
-        document.getElementById("last-modified").textContent = document.lastModified;
-    </script>
+    <script type="module" src="scripts/main.js">defer </script>
+    
 </body>
 
 </html>
