--- a/final/contact.html
+++ b/final/contact.html
@@ -157,7 +157,8 @@
         </div>
     </footer>
 
-    <script type="module" src="scripts/main.js">defer </script>
+    <script src="scripts/main.js" defer></script>
+
     
 </body>
 
