--- a/final/destinations.html
+++ b/final/destinations.html
@@ -87,7 +87,8 @@
     </footer>
 
     <script type="module" src="scripts/destinations.js"></script>
-    <script type="module" src="scripts/main.js">defer </script>
+    <script src="scripts/main.js" defer></script>
+
     
 </body>
 
