--- a/final/index.html
+++ b/final/index.html
@@ -148,7 +148,8 @@
         </div>
     </footer>
     
-    <script type="module" src="scripts/main.js">defer </script>
+    <script src="scripts/main.js" defer></script>
+
     
 
 </body>
