--- a/final/index.html
+++ b/final/index.html
@@ -125,7 +125,7 @@
                 <p>Phone: +63 912 345 6789</p>
             </section>
 
-            <section class="sociallinks" aria-label="Social Media Links">
+            <section class="sociallinks">
                 <a href="https://youtube.com" title="YouTube">
                     <img src="images/youtube.png" alt="YouTube Logo" width="32" height="32" />
                 </a>
@@ -137,7 +137,7 @@
                 </a>
             </section>
 
-            <section class="designer" aria-label="Site Information">
+            <section class="designer">
                 <p>&copy; <span id="current-year"></span> Explore Philippines | 🇵🇭Glenn Soriano🇵🇭</p>
                 <p>Last Modified: <span id="last-modified"></span></p>
                 <p>
