--- a/final/destinations.html
+++ b/final/destinations.html
@@ -43,6 +43,7 @@
     </header>
 
     <main>
+        <h1>Explore Philippines: Top Travel Destinations</h1>
         <section>
             <h2>Top Travel Destinations</h2>
             <p>Browse our favorite must-visit places in the Philippines. Click "More Info" to learn more, and favorite
