--- a/final/contact.html
+++ b/final/contact.html
@@ -141,12 +141,18 @@
                 <p>Phone: +63 912 345 6789</p>
             </section>
 
-            <section class="sociallinks">
-                <a href="https://youtube.com"><img src="images/youtube.png" alt="YouTube" width="32" height="32" /></a>
-                <a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter" width="32" height="32" /></a>
-                <a href="https://instagram.com"><img src="images/instagram.png" alt="Instagram" width="32"
-                        height="32" /></a>
+            <section class="sociallinks" aria-label="Social Media Links">
+                <a href="https://youtube.com" title="YouTube">
+                    <img src="images/youtube.png" alt="YouTube Logo" width="32" height="32" loading="lazy" />
+                </a>
+                <a href="https://twitter.com" title="Twitter">
+                    <img src="images/twitter.png" alt="Twitter Logo" width="32" height="32" loading="lazy" />
+                </a>
+                <a href="https://www.instagram.com/" title="Instagram">
+                    <img src="images/instagram.png" alt="Instagram Logo" width="32" height="32" loading="lazy" />
+                </a>
             </section>
+            
 
             <section class="designer">
                 <p>&copy; <span id="current-year"></span> Explore Philippines | 🇵🇭Glenn Soriano🇵🇭</p>
