--- a/final/destinations.html
+++ b/final/destinations.html
@@ -66,15 +66,16 @@
 
             <section class="sociallinks" aria-label="Social Media Links">
                 <a href="https://youtube.com" title="YouTube">
-                    <img src="images/youtube.png" alt="YouTube Logo" width="32" height="32" />
+                    <img src="images/youtube.png" alt="YouTube Logo" width="32" height="32" loading="lazy" />
                 </a>
                 <a href="https://twitter.com" title="Twitter">
-                    <img src="images/twitter.png" alt="Twitter Logo" width="32" height="32" />
+                    <img src="images/twitter.png" alt="Twitter Logo" width="32" height="32" loading="lazy" />
                 </a>
                 <a href="https://www.instagram.com/" title="Instagram">
-                    <img src="images/instagram.png" alt="Instagram Logo" width="32" height="32" />
+                    <img src="images/instagram.png" alt="Instagram Logo" width="32" height="32" loading="lazy" />
                 </a>
             </section>
+            
 
             <section class="designer">
                 <p>&copy; <span id="current-year"></span> Explore Philippines | 🇵🇭Glenn Soriano🇵🇭</p>
