--- a/final/index.html
+++ b/final/index.html
@@ -125,17 +125,18 @@
                 <p>Phone: +63 912 345 6789</p>
             </section>
 
-            <section class="sociallinks">
+            <section class="sociallinks" aria-label="Social Media Links">
                 <a href="https://youtube.com" title="YouTube">
-                    <img src="images/youtube.png" alt="YouTube Logo" width="32" height="32" />
+                    <img src="images/youtube.png" alt="YouTube Logo" width="32" height="32" loading="lazy" />
                 </a>
                 <a href="https://twitter.com" title="Twitter">
-                    <img src="images/twitter.png" alt="Twitter Logo" width="32" height="32" />
+                    <img src="images/twitter.png" alt="Twitter Logo" width="32" height="32" loading="lazy" />
                 </a>
                 <a href="https://www.instagram.com/" title="Instagram">
-                    <img src="images/instagram.png" alt="Instagram Logo" width="32" height="32" />
+                    <img src="images/instagram.png" alt="Instagram Logo" width="32" height="32" loading="lazy" />
                 </a>
             </section>
+            
 
             <section class="designer">
                 <p>&copy; <span id="current-year"></span> Explore Philippines | 🇵🇭Glenn Soriano🇵🇭</p>
