--- a/final/contact.html
+++ b/final/contact.html
@@ -54,6 +54,7 @@
     </section>
 
     <main>
+        <h1>Contact Explore Philippines</h1>
         <section>
             <h2>We'd Love to Hear From You!</h2>
             <p>If you have any questions or feedback about your next Philippine adventure, feel free to get in touch
