--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="week02/index.html">Chamber</a></li>
-                <li><a href="final/index.html">Final Project</a></li>
+                <li><a href="final/index.html">Final</a></li>
                 <li><a href="https://github.com/glenn-d-soriano" target="_blank">GitHub Profile</a></li>
                 <li><a href="https://www.linkedin.com/in/YOUR_PROFILE" target="_blank">LinkedIn</a></li>
             </ul>
