--- a/final/contact.html
+++ b/final/contact.html
@@ -164,7 +164,8 @@
         </div>
     </footer>
 
-    <script src="scripts/main.js" defer></script>
+    <script type="module" src="scripts/main.js"></script>
+
 
     
 </body>
