--- a/final/destinations.html
+++ b/final/destinations.html
@@ -89,7 +89,8 @@
     </footer>
 
     <script type="module" src="scripts/destinations.js"></script>
-    <script src="scripts/main.js" defer></script>
+    <script type="module" src="scripts/main.js"></script>
+
 
     
 </body>
