--- a/final/index.html
+++ b/final/index.html
@@ -149,7 +149,8 @@
         </div>
     </footer>
     
-    <script src="scripts/main.js" defer></script>
+    <script type="module" src="scripts/main.js"></script>
+
 
     
 
