--- a/final/contact.html
+++ b/final/contact.html
@@ -64,7 +64,7 @@
         <!-- CONTACT FORM -->
         <section class="contact-form">
             <h2>Send Us a Message</h2>
-            <form action="#" method="post">
+            <form id="contact-form">
                 <label for="name">Full Name:</label>
                 <input type="text" id="name" name="name" required />
 
@@ -101,6 +101,7 @@
 
                 <button type="submit">Send Message</button>
             </form>
+            <div id="contact-message" class="form-message"></div>
         </section>
 
         <!-- EMPLOYEE PROFILES -->
@@ -163,6 +164,8 @@
             </section>
         </div>
     </footer>
+
+    <script type="module" src="scripts/contact-main.js"></script>
 
     <script type="module" src="scripts/main.js"></script>
 
