--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,8 +30,8 @@
             <div class="logo-text">Winnipeg <span>Chamber of Commerce</span></div>
         </div>
         <nav>
-            <button id="menuBtn" aria-label="Menu">☰</button>
-            <ul id="navMenu">
+            <button id="menu-toggle" aria-label="Menu">☰</button>
+            <ul class="nav-links">
                 <li><a href="index.html" class="active" id="menu-home">Home</a></li>
                 <li><a href="directory.html" id="menu-directory">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
