--- a/final/contact.html
+++ b/final/contact.html
@@ -33,8 +33,8 @@
             <div class="logo-text"><span>Book Now!</span></div>
         </div>
         <p class="site-title">Explore Philippines</p>
-        <button id="menu-toggle" aria-label="Toggle Navigation Menu">☰</button>
-        <nav>
+        <button id="menu-toggle" aria-label="Menu">☰</button>
+        <ul class="nav-links">
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="destinations.html">Destinations</a></li>
