--- a/final/destinations.html
+++ b/final/destinations.html
@@ -31,8 +31,8 @@
         </div>
 
         <p class="site-title">Explore Philippines</p>
-        <button id="menu-toggle" aria-label="Menu">☰</button>
-        <ul class="nav-links">
+        <button id="menu-toggle" aria-label="Toggle Navigation Menu">☰</button>
+        <nav>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="destinations.html" class="active" id="menu-discover">Destinations</a></li>
@@ -88,7 +88,7 @@
         </div>
     </footer>
 
-    <script type="module" src="scripts/destinations.js"></script>
+    <script type="module" src="scripts/fetchDestinations.js"></script>
     <script type="module" src="scripts/main.js"></script>
 
 
