--- a/final/index.html
+++ b/final/index.html
@@ -142,7 +142,7 @@
                 <p>&copy; <span id="current-year"></span> Explore Philippines | 🇵🇭Glenn Soriano🇵🇭</p>
                 <p>Last Modified: <span id="last-modified"></span></p>
                 <p>
-                    <a href="references.html">Attributions</a> |
+                    <a href="attribution.html">Attributions</a> |
                     <a href="https://youtu.be/YOUR_VIDEO_ID" target="_blank" rel="noopener noreferrer">Project Video</a>
                 </p>
             </section>
