--- a/final/destinations.html
+++ b/final/destinations.html
@@ -81,7 +81,7 @@
                 <p>&copy; <span id="current-year"></span> Explore Philippines | 🇵🇭Glenn Soriano🇵🇭</p>
                 <p>Last Modified: <span id="last-modified"></span></p>
                 <p>
-                    <a href="references.html">Attributions</a> |
+                    <a href="attribution.html">Attributions</a> |
                     <a href="https://youtu.be/YOUR_VIDEO_ID" target="_blank">Project Video</a>
                 </p>
             </section>
