--- a/final/contact.html
+++ b/final/contact.html
@@ -128,8 +128,14 @@
                 <a href="info@exploreph.com">Contact us</a>
             </address>
             <div class="google-map">
-                <iframe src="https://www.google.com/maps/embed?pb=..." width="400" height="300" allowfullscreen=""
-                    loading="lazy"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=..."
+                    width="400"
+                    height="300"
+                    allowfullscreen=""
+                    loading="lazy"
+                    title="Map showing Explore Philippines location in Makati City"
+                ></iframe>
             </div>
         </section>
     </main>
