--- a/final/contact.html
+++ b/final/contact.html
@@ -46,7 +46,7 @@
 
     
     <section class="hero">
-        <img src="images/hero.webp" alt="Philippine tropical beach" loading="lazy" />
+        <img src="images/hero.webp" alt="Philippine tropical beach" width="1200" height="600" />
         <div class="hero-text">
             <h2>Discover Paradise</h2>
             <p>Your guide to the best budget-friendly adventures in the Philippines.</p>
