--- a/final/contact.html
+++ b/final/contact.html
@@ -165,7 +165,7 @@
             <section class="designer">
                 <p>&copy; <span id="current-year"></span> Explore Philippines | 🇵🇭Glenn Soriano🇵🇭</p>
                 <p>Last Modified: <span id="last-modified"></span></p>
-                <p><a href="attribution.html">Attributions</a> | <a href="https://youtu.be/YOUR_VIDEO_ID"
+                <p><a href="attribution.html">Attributions</a> | <a href="https://www.loom.com/share/407a4b8b37914b41be46cb896afc36af?sid=6e19c61d-7b22-49af-ae06-861affb3720a"
                         target="_blank">Project Video</a></p>
             </section>
         </div>
