--- a/final/index.html
+++ b/final/index.html
@@ -143,7 +143,7 @@
                 <p>Last Modified: <span id="last-modified"></span></p>
                 <p>
                     <a href="attribution.html">Attributions</a> |
-                    <a href="https://youtu.be/YOUR_VIDEO_ID" target="_blank" rel="noopener noreferrer">Project Video</a>
+                    <a href="https://www.loom.com/share/407a4b8b37914b41be46cb896afc36af?sid=6e19c61d-7b22-49af-ae06-861affb3720a" target="_blank" rel="noopener noreferrer">Project Video</a>
                 </p>
             </section>
         </div>
