--- a/final/destinations.html
+++ b/final/destinations.html
@@ -26,7 +26,8 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/logo.jpeg" alt="Explore Philippines Logo" />
+            <img src="images/logo.jpeg" alt="Explore Philippines Logo" width="200" height="100" />
+
             <div class="logo-text"> <span>Book Now!</span></div>
         </div>
 
