--- a/final/index.html
+++ b/final/index.html
@@ -29,7 +29,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/logo.jpeg" alt="Explore Philippines Logo" />
+            <img src="images/logo.jpeg" alt="Explore Philippines Logo" width="200" height="100" />
             <div class="logo-text"><span>Book Now!</span></div>
         </div>
         <p class="site-title">Explore Philippines</p>
