--- a/final/destinations.html
+++ b/final/destinations.html
@@ -34,7 +34,7 @@
         <p class="site-title">Explore Philippines</p>
         <button id="menu-toggle" aria-label="Toggle Navigation Menu">☰</button>
         <nav>
-            <ul class="nav-links">
+            <nav role="navigation" aria-label="Main navigation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="destinations.html" class="active" id="menu-discover">Destinations</a></li>
                 <li><a href="contact.html">Contact</a></li>     
